@@ -51,6 +51,5 @@ MIGRATE TO PHETCOMMON
 - PolygonUtils
 - ShapeUtils
 - Dimension3D
-- BooleanPropertyCheckBox
 
 --
